--- a/Milestone 1/style.css
+++ b/Milestone 1/style.css
@@ -89,7 +89,7 @@ body {
   font-weight: 300;
 }
 
-.contactInfo.languge .percent {
+.contactInfo.language .percent {
   position: relative;
   width: 100%;
   height: 6px;
@@ -98,7 +98,7 @@ body {
   margin-top: 5px;
 }
 
-.contactInfo.languge .percent div {
+.contactInfo.language .percent div {
   position: absolute;
   top: 0;
   left: 0;
